# chatbot-gaviota-mvp

./: .gitignore  README.md  config.example.yaml  makefile  pyproject.toml
chatbot/: bot.py  config.py  embed.py  index.py
src/: app.py  bot.py  config.py
