[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beaver-db>=1.3.0",
    "lingo-ai>=0.3.1",
    "purely>=0.1.2",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
]
